# jlc-esp32s3

./: CMakeLists.txt  sdkconfig  sdkconfig.old  test_arrow_keys.py  test_debug.sh
main/: CMakeLists.txt  main.c
main/inc/: atomic.h  bus.h  cmd.h  common.h  core.h  device.h  driver.h  list.h  shell.h  shell_cmds.h  shell_platform.h  sysfs.h  types.h
main/inc/fs/: fs.h  sysfs.h  types.h  vfs.h
main/inc/i2c/: i2c.h  i2c_esp32.h  qmi8658a.h
main/inc/tty/: tty.h
main/src/: board.c  bus.c  core.c  device.c  driver.c
main/src/cmd/: cmd_clear.c  cmd_help.c  cmd_ls.c  cmd_reboot.c  cmd_top.c
main/src/fs/: core.c  sysfs.c  vfs.c
main/src/i2c/: i2c.c  i2c_esp32.c  i2c_qmi8658a.c
main/src/shell/: core.c  shell_cmds.c  shell_platform.c  shell_platform_esp32.c
main/src/tty/: core.c
